--- a/album.html
+++ b/album.html
@@ -2,12 +2,43 @@
 <html>
 <head>
 	<title></title>
+	<style type = "text/css">
+		ol{
+			font-family: calibri;
+			font-size: 100 px;
+			font-weight: bold;
+			text-decoration: underline;
+			text-decoration: italic;
+			color: blue;
+		}
+		table{
+			font-weight: bold;
+			text-decoration: italic;
+			font-size: 50 px;
+			font-family: arial;
+		}
+		h1{
+			font-family: cursive;
+			color: purple;
+			font-size: 500 px;
+		}
+		h2{
+			font-family: cursive;
+			color: purple;
+		}
+		body{
+			background-color: pink;
+		}
+		p{
+			font-size: 200 px;
+		}
+	</style>
 </head>
 <body>
 	<h1>Lil Baby</h1>
 	<img src = "https://upload.wikimedia.org/wikipedia/en/4/44/Lil_Baby_-_My_Turn.png">
 	<h2>My Turn</h2>
-	<h2>
+	<h3>
 		<ol>
 			<li>Get Ugly</li>
 			<li>Heatin Up</li>
@@ -30,26 +61,28 @@
 			<li>Forget That</li>
 			<li>Solid</li>
 		</ol>
-	</h2>
+	</h3>
 	<table border = 1 pxl>
-		<tr><td>Year</td><td>Album</td></tr>
-		<tr><td>2020</td><td>My Turn</td></tr>
-		<tr><td>2018</td><td>Harder Than Ever</td></tr>
-		<tr><td>2018</td><td>Street Gossip</td></tr>
-		<tr><td>2017</td><td>Perfect Timing</td></tr>
-		<tr><td>2017</td><td>Too Hard</td></tr>
-		<tr><td>2017</td><td>Harder Than Harder: Gangsta Grillz</td></tr>		
-		<tr><td>2017</td><td>2 The Hard Way</td></tr>
-		<tr><td>2009</td><td>The way</td></tr>
-		<tr><td>2018</td><td>Drip Harder</td></tr>
-		<tr><td>2019</td><td>still sad still cool</td></tr>
-		<tr><td>2017</td><td>Million Dollar Baby</td></tr>
-		<tr><td>2018</td><td>Dope Shxt Only</td></tr>
+		<tr bgcolor = red><td>Year</td><td>Album</td></tr>
+		<tr bgcolor = orange><td>2020</td><td>My Turn</td></tr>
+		<tr bgcolor = yellow><td>2018</td><td>Harder Than Ever</td></tr>
+		<tr bgcolor = green><td>2018</td><td>Street Gossip</td></tr>
+		<tr bgcolor = cyan><td>2017</td><td>Perfect Timing</td></tr>
+		<tr bgcolor = magenta><td>2017</td><td>Too Hard</td></tr>
+		<tr bgcolor = red><td>2017</td><td>Harder Than Harder: Gangsta Grillz</td></tr>		
+		<tr bgcolor = orange><td>2017</td><td>2 The Hard Way</td></tr>
+		<tr bgcolor = yellow><td>2009</td><td>The way</td></tr>
+		<tr bgcolor = green><td>2018</td><td>Drip Harder</td></tr>
+		<tr bgcolor = cyan><td>2019</td><td>still sad still s*xy</td></tr>
+		<tr bgcolor = magenta><td>2017</td><td>Million Dollar Baby</td></tr>
+		<tr bgcolor = red><td>2018</td><td>Dope Shxt Only</td></tr>
 	</table>
 
 	<p>
 		<a href = "https://twitter.com/lilbaby4PF?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">twitter</a>
+		<br>
 		<a href = "https://www.facebook.com/4pflilbaby/">facebook</a>
+		<br>
 		<a href = "https://www.instagram.com/lilbaby_1/">instagram</a>
 	</p>
 
